--- a/home page/style.css
+++ b/home page/style.css
@@ -2,6 +2,7 @@ body{
     padding: 5px;
     margin: 7px;   
 }
+/*NAV BAR*/
 header{
     display: flex;
 }
@@ -28,8 +29,8 @@ header{
      background-color: #D7EAF3;
      width: 200px;
      height: 30px;
-     top: 4px;
-     left: -44px;
+     margin-left: 10px;
+     margin-top: 12px;
 
 
 }
@@ -53,42 +54,96 @@ header{
     font-size: 15px;
     font-weight: bold;
 }
-nav{
-    display: flex;
-    margin-left: 30px;
-    margin-right: 30px;
-
+#navigation-elements{
+   font-family: 'Gabarito', sans-serif;
+   font-family: 'Montserrat', sans-serif;
+   font-family: 'Palanquin Dark', sans-serif;
+   margin-left: 90px;
+   margin-top: 7px;
+   padding: 3px;
+   display: flex;
 }
-nav #blogs{
+#navigation-elements div{
     display: flex;
     flex-direction: column;
-     margin: 4px;
-     align-items: center;
-
+    margin-left: 13px;
+    margin-right: 13px;
+    align-items: center;
 }
-nav a{
-    font-family: 'Gabarito', sans-serif;
-    font-family: 'Montserrat', sans-serif;
-    font-family: 'Palanquin Dark', sans-serif;
+#navigation-elements div a{
     text-decoration: none;
+    color: #05386B;
 }
-nav #communities{
+#login{
     display: flex;
     flex-direction: column;
-    margin: 4px;
     align-items: center;
+    justify-content: center;
+    background-color: #05386B;
+    height: 60px;
+    width: 90px;
+    margin-left: 300px;
 }
+#login a{
+    text-decoration: none;
+    font-family: 'Gabarito', sans-serif;
+   font-family: 'Montserrat', sans-serif;
+   font-family: 'Palanquin Dark', sans-serif;
+   color:#D7EAF3;
+   
+}
+/*NAV BAR END*/
+/*banner start*/
+#banner{
+    
+    padding: 7px;
+    margin: 10px;
 
-nav #activities{
-    display: flex;
-    flex-direction: column;
-    margin: 4px;
-    align-items: center;
 }
-
-nav #more{
-    display: flex;
-    flex-direction: column;
-    margin: 4px;
-    align-items: center;
+#banner h3{
+    font-family: 'Gabarito', sans-serif;
+   font-family: 'Montserrat', sans-serif;
+   font-family: 'Palanquin Dark', sans-serif;
+   font-weight: bolder;
+   font-size: 34px;
+}
+#banner p{
+    font-family: 'Gabarito', sans-serif;
+   font-family: 'Montserrat', sans-serif;
+   font-family: 'Palanquin Dark', sans-serif;
+   background-color: #05386B;
+   color: #ffffff;
+   max-width: fit-content;
+   padding: 5px;
+   font-weight: bold;
+   cursor: pointer;
+}
+/*banner End*/
+#vlogs{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-rows: minmax(300px,auto);
+  grid-row-gap:20px;
+  grid-column-gap:60px;
+  padding: 5px;
+  margin: 10px;
+  
+}
+#vlogs article{
+    font-family: 'Gabarito', sans-serif;
+   font-family: 'Montserrat', sans-serif;
+   font-family: 'Palanquin Dark', sans-serif;
+   
+   
+}
+#vlogs #item-1{
+    grid-row: 1/3;
+}
+#vlogs #item-2{
+    grid-column: 2/3;
+    grid-row:1/2;
+}
+#vlogs #item-3{
+    grid-column: 2/3;
+    grid-row:2/4;
 }
