--- a/log_in page/style.css
+++ b/log_in page/style.css
@@ -6,7 +6,7 @@
 body {
     height: 1024px;
     width: auto;
-    background-image: url(../imgs/community_based_website_background.png);
+    background-image: url(../imgs/login-back\ ground.jpg);
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-size: cover;
