--- a/blogs page/blog.css
+++ b/blogs page/blog.css
@@ -1,38 +1,49 @@
-*{
+* {
     font-family: 'Gabarito', sans-serif;
     font-family: 'Montserrat', sans-serif;
     font-family: 'Palanquin Dark', sans-serif;
 }
-body{
+
+body {
     padding: 5px;
-    margin: 7px; 
+    margin: 7px;
     height: 2201px;
     width: auto;
     background-image: url(../imgs/community_based_website_background.png);
     background-repeat: no-repeat;
     background-attachment: scroll;
-    background-size: cover;  
+    background-size: cover;
 }
 
 /*Aside community tab*/
-aside{
-    display:block;
+aside {
+    display: block;
     max-width: 27%;
 }
-aside section{
+
+aside section {
     background-color: #ffffff;
     padding: 7px;
     margin: 30px;
 }
-#vlogs{
-    width:73%;
+
+#vlogs {
+    width: 73%;
 
 }
-#vlogs article{
+
+#vlogs article {
     background-color: #ffffff;
     padding: 10px;
     margin: 30px;
 }
-.main_body{
+
+.main_body {
     display: flex;
+}
+
+body {
+    padding: 0px;
+
+    margin-top: 5px;
 }
