--- a/home page/style.css
+++ b/home page/style.css
@@ -1,12 +1,13 @@
-body{
-    padding: 5px;
-    margin: 7px; 
+body {
+    padding: 0px;
+
+    margin-top: 5px;
     height: 2201px;
     width: auto;
     background-image: url(../imgs/community_based_website_background.png);
     background-repeat: no-repeat;
     background-attachment: scroll;
-    background-size: cover;  
+    background-size: cover;
 }
 
 
@@ -14,80 +15,89 @@ body{
 
 
 /*banner start*/
-#banner{
+#banner {
     background-color: #ffffff;
     padding: 7px;
     margin: 10px;
 
 }
-#banner h3{
+
+#banner h3 {
     font-family: 'Gabarito', sans-serif;
-   font-family: 'Montserrat', sans-serif;
-   font-family: 'Palanquin Dark', sans-serif;
-   font-weight: bolder;
-   font-size: 34px;
+    font-family: 'Montserrat', sans-serif;
+    font-family: 'Palanquin Dark', sans-serif;
+    font-weight: bolder;
+    font-size: 34px;
 }
-#banner p{
+
+#banner p {
     font-family: 'Gabarito', sans-serif;
-   font-family: 'Montserrat', sans-serif;
-   font-family: 'Palanquin Dark', sans-serif;
-   background-color: #05386B;
-   color: #ffffff;
-   max-width: fit-content;
-   padding: 5px;
-   font-weight: bold;
-   cursor: pointer;
+    font-family: 'Montserrat', sans-serif;
+    font-family: 'Palanquin Dark', sans-serif;
+    background-color: #05386B;
+    color: #ffffff;
+    max-width: fit-content;
+    padding: 5px;
+    font-weight: bold;
+    cursor: pointer;
 }
+
 /*banner End*/
-#vlogs{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-auto-rows: minmax(300px,auto);
-  grid-row-gap:20px;
-  grid-column-gap:40px;
-  padding: 5px;
-  margin: 10px;
-  
+#vlogs {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: minmax(300px, auto);
+    grid-row-gap: 20px;
+    grid-column-gap: 40px;
+    padding: 5px;
+    margin: 10px;
+
 }
-#vlogs article{
+
+#vlogs article {
     font-family: 'Gabarito', sans-serif;
-   font-family: 'Montserrat', sans-serif;
-   font-family: 'Palanquin Dark', sans-serif;
-   background-color: #ffffff;
-   margin: 3px;
-   padding: 16px;
-   
-   
+    font-family: 'Montserrat', sans-serif;
+    font-family: 'Palanquin Dark', sans-serif;
+    background-color: #ffffff;
+    margin: 3px;
+    padding: 16px;
+
+
 }
-#vlogs #item-1{
+
+#vlogs #item-1 {
     grid-row: 1/3;
 }
-#vlogs #item-2{
+
+#vlogs #item-2 {
     grid-column: 2/3;
-    grid-row:1/2;
+    grid-row: 1/2;
 }
-#vlogs #item-3{
+
+#vlogs #item-3 {
     grid-column: 2/3;
-    grid-row:2/4;
+    grid-row: 2/4;
 }
+
 #community_tab {
     font-family: 'Gabarito', sans-serif;
-   font-family: 'Montserrat', sans-serif;
-   font-family: 'Palanquin Dark', sans-serif;
+    font-family: 'Montserrat', sans-serif;
+    font-family: 'Palanquin Dark', sans-serif;
 }
-#community_tab div{
-   display: flex;
-   flex-wrap: wrap;
-   justify-content: center;
-   height: 400px;
-   align-items: center;
-   
+
+#community_tab div {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    height: 400px;
+    align-items: center;
+
 }
-#community_tab section{
+
+#community_tab section {
     background-color: #ffffff;
     height: 350px;
     width: 350px;
     padding: 15px;
     margin: 10px;
 }
-
