--- a/log_in page/style.css
+++ b/log_in page/style.css
@@ -14,10 +14,10 @@ body {
 }
 
 #container {
-    width: 467px;
-    height: 735px;
+    width: 400px;
+    height: 600px;
     flex-shrink: 0;
-    border-radius: 11px;
+    border-radius: 20px;
     background: #FFF;
     /* mix-blend-mode: lighten; */
     margin: 110px auto;
@@ -36,9 +36,152 @@ body {
     font-style: normal;
     font-weight: 600;
     line-height: normal;
-    position: absolute;
-    margin: 36px 166px 628px 146px;
+    position: relative;
+    margin: 70px 166px 628px 145px;
+    top: 26px;
+    display: inline;
 
 
 
 }
+
+#container p {
+    color: #010200;
+
+    font-family: Actor;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+
+}
+
+#username {
+
+    position: relative;
+
+    top: 61px;
+    left: 64px;
+    width: 80px;
+    bottom: 0px;
+
+}
+
+#nameinput {
+    position: relative;
+    margin-left: 58px;
+    margin-top: 63px;
+    width: 252px;
+    height: 34px;
+    border: solid rgb(199, 190, 190);
+    border-radius: 20px;
+    background-color: #c1ddee;
+
+}
+
+#pass {
+    position: relative;
+    left: 63px;
+    width: 80px;
+    top: 11px;
+}
+
+#passinput {
+
+    position: relative;
+    margin-left: 58px;
+    margin-top: 13px;
+    width: 252px;
+    height: 34px;
+    border: solid rgb(199, 190, 190);
+    border-radius: 20px;
+    background-color: #c1ddee;
+}
+
+#forget {
+    position: relative;
+    display: inline-block;
+    width: 130px;
+    left: 201px;
+    text-decoration: none;
+    font-family: 'Palanquin Dark', sans-serif;
+    font-weight: 200;
+    color: #05386B;
+}
+
+#login_btn {
+    position: relative;
+    height: 45px;
+    flex-shrink: 0;
+    border-radius: 50px;
+    background: linear-gradient(90deg, #A2EFE1 0%, #77B5D9 100%);
+    width: 116px;
+    top: 53px;
+    border: none;
+    color: #FFF;
+font-family: sans-serif Bold;
+font-size: 20px;
+font-style: normal;
+font-weight: 600;
+line-height: normal;
+color: #05386B;
+box-shadow: -5px -5px 10px 0px rgba(255, 255, 255, 0.5), 5px 5px 10px 0px rgba(0, 0, 0, 0.3);
+}
+
+#signupway{
+    position: relative;
+    left: 140px;
+    top: 52px;
+    width: 110px;
+    height: 23px;
+}
+
+
+.signup{
+    position: relative;
+    width: 52px;
+    top: 107px;
+    left: 166px;
+    
+}
+.signup a{
+    text-decoration: none;
+    font-family: 'Palanquin Dark', sans-serif;
+    color: #05386B;
+}
+#logo_name a {
+    font-family: 'Gabarito', sans-serif;
+    font-family: 'Montserrat', sans-serif;
+    font-family: 'Palanquin Dark', sans-serif;
+    text-decoration: none;
+    width: 95px;
+    height: 12px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-right: 0px;
+    color: #05386B;
+}
+#logo_name img{
+    margin-left: 30px;
+}
+
+.icon i{
+   font-size: 30px;
+   margin-right: 5px;
+}
+.icon{
+    position: relative;
+    width: 120px;
+    left: 140px;
+    top: 69px;
+    height: 19px;
+
+}
+.fa-google {
+    background: conic-gradient(from -45deg, #ea4335 110deg, #4285f4 90deg 180deg, #34a853 180deg 270deg, #fbbc05 270deg) 73% 55%/150% 150% no-repeat;
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    -webkit-text-fill-color: transparent;
+  }
